# asmtop

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  PLAN.md  README.md  example_usage.py  pmset_analysis.md  pmset_manual.txt  powermetrics_analysis.md  pyproject.toml  system_profiler_analysis.md  system_profiler_manual.txt
.claude/: settings.local.json
src/: main.cpp
src/collectors/: base_collector.h  pmset_collector.cpp  pmset_collector.h  powermetrics_collector.cpp  powermetrics_collector.h  system_profiler_collector.cpp  system_profiler_collector.h
src/core/: app.cpp  app.h
src/models/: battery.h  hardware.h  power.h
src/ui/pages/: base_page.h  battery_page.cpp  battery_page.h  hardware_page.cpp  hardware_page.h  power_page.cpp  power_page.h
src/utils/: command_runner.cpp  command_runner.h  permission.cpp  permission.h
