[project]
name = "mac-monitor"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
description = "Apple Silicon Mac系统监控工具"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
]
dependencies = [
  "pydantic>=2.0.0",
  "typing-extensions>=4.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.2.0",
  "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W", "I", "B", "C4", "SIM"]
ignore = ["E501"]
fix = true

[tool.ruff.isort]
case-sensitive = true
force-sort-within-sections = true
order-by-type = true
section-order = [
    "future",
    "standard_library",
    "third_party",
    "first_party",
    "local_folder",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_in_arg = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=src/mac_monitor --cov-report=term --cov-report=html"
cov_fail_under = 90
